[package]
name = "layer2"
version = "0.1.0"
authors = ["Eason Gao <kaoimin@qq.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.5"
bit-vec = "0.6"
bytes = "0.5"
futures-timer = "3.0"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"
tokio = { version = "0.2", features = ["fs", "macros", "rt-core", "sync"] }
